SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdepim/; revision=1082814

--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -56,7 +56,7 @@ Name[oc]=Liure/ocupat
 Name[pa]=ਵੇਹਲਾ/ਰੁਝਿਆ
 Name[pl]=Wolny/zajęty
 Name[pt]=Livre/Ocupado
-Name[pt_BR]=Disponibilidade
+Name[pt_BR]=Livre/ocupado
 Name[ro]=Liber/ocupat
 Name[ru]=Занятое время
 Name[sk]=Voľný čas
