SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdepim/; revision=1083482

--- a/interfaces/calendar/calendardecoration.desktop
+++ b/interfaces/calendar/calendardecoration.desktop
@@ -6,7 +6,7 @@ Name[ca@valencia]=Interfície de decoració del calendari
 Name[cs]=Rozhraní dekorace kalendáře
 Name[da]=Kalenderdekorations-plugin
 Name[de]=Dekoration für den Kalender
-Name[el]=Διασύνδεση διακόσμησης ημερολογίου
+Name[el]=Διεπαφή διακόσμησης ημερολογίου
 Name[en_GB]=Calendar Decoration Interface
 Name[es]=Interfaz de decoración del calendario
 Name[et]=Kalendri dekoratsiooni liides
