--- a/interfaces/calendar/calendarplugin.desktop
+++ b/interfaces/calendar/calendarplugin.desktop
@@ -6,7 +6,7 @@ Name[ca@valencia]=Interfície de connector del calendari
 Name[cs]=Rozhraní modulu kalendáře
 Name[da]=Kalenders plugin-grænseflade
 Name[de]=Kalender-Modulschnittstelle
-Name[el]=Διασύνδεση προσθέτου ημερολογίου
+Name[el]=Διεπαφή προσθέτου ημερολογίου
 Name[en_GB]=Calendar Plugin Interface
 Name[es]=Complemento de interfaz del calendario
 Name[et]=Kalendriplugina liides
