--- a/interfaces/korganizer/korgprintplugin.desktop
+++ b/interfaces/korganizer/korgprintplugin.desktop
@@ -6,7 +6,7 @@ Name[ca@valencia]=Interfície de connector d'impressió del KOrganizer
 Name[cs]=Tiskové rozhraní komponenty KOrganizeru
 Name[da]=Grænseflade til KOrganizer print-plugin
 Name[de]=KOrganizer-Druckschnittstelle
-Name[el]=Διασύνδεση προσθέτου εκτύπωσης KOrganizer
+Name[el]=Διεπαφή προσθέτου εκτύπωσης KOrganizer
 Name[en_GB]=KOrganizer Print Plugin Interface
 Name[es]=Interfaz del complemento de impresión de KOrganizer
 Name[et]=KOrganizeri trükkimisplugina liides
