--- a/korgac/korgac.desktop
+++ b/korgac/korgac.desktop
@@ -62,7 +62,7 @@ GenericName[ca@valencia]=Client del dimoni d'alarma de KOrganizer
 GenericName[cs]=Klient démona přípomínek KOrganizeru
 GenericName[da]=KOrganizer-påmindelsesklient
 GenericName[de]=Hintergrund-Erinnerungsfunktion für KOrganizer
-GenericName[el]=Δαίμονας πελάτη υπενθύμισης του KOrganizer
+GenericName[el]=Δαίμονας υπενθύμισης του KOrganizer
 GenericName[en_GB]=KOrganizer Reminder Dæmon Client
 GenericName[eo]=Kliento por la alarmo-demono de Organizilo
 GenericName[es]=Cliente del demonio de recordatorio de KOrganizer
