--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -62,7 +62,7 @@ Comment[ca@valencia]=Mostra totes les dates en el KOrganizer també en el sistem
 Comment[cs]=Zobrazení všech dat v KOrganizeru také v židovském kalendáři.
 Comment[da]=Viser alle datoer i KOrganizer - også i det jødiske kalendersystem.
 Comment[de]=Zeigt alle Daten in KOrganizer auch im jüdischen Kalendarium an.
-Comment[el]=Εμφανίζει όλες τις ημερομηνίες στο korganizer και στο εβραϊκό ημερολογιακό σύστημα.
+Comment[el]=Εμφανίζει στο KOrganizer όλες τις ημερομηνίες και στο εβραϊκό ημερολογιακό σύστημα.
 Comment[en_GB]=Shows all dates in KOrganizer also in the Jewish calendar system.
 Comment[es]=Muestra todas las fechas en KOrganizer también en el sistema de calendario judío.
 Comment[et]=Näitab KOrganizeris kõiki kuupäevi ka juudi kalendri järgi.
