--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -8,7 +8,7 @@ Name[ca@valencia]=Connector d'imatge del dia de la Viquipèdia per als calendari
 Name[cs]=Wikipedia modul 'Obrázek dne' pro kalendáře
 Name[da]=Wikipedia dagens billede-plugin for kalendere
 Name[de]=Bild des Tages aus Wikipedia für den Kalender
-Name[el]=Πρόσθετο εικόνας της ημέρας της Wikipedia για Ημερολόγια
+Name[el]=Πρόσθετο εικόνας της ημέρας της Wikipedia για ημερολόγια
 Name[en_GB]=Wikipedia Picture Of the Day Plugin for Calendars
 Name[es]=Complemento de imagen del día de la Wikipedia para calendarios
 Name[et]=Wikipedia päevapildi plugin kalendritele
