--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -60,7 +60,7 @@ Comment[ca@valencia]=Este connector vos permet imprimir una llista de tots els e
 Comment[cs]=Tento modul umožňuje tisk seznamu všech budoucích událostí a úkolů.
 Comment[da]=Dette plugin gør at du kan udskrive en liste med alle kommende begivenheder og opgaver.
 Comment[de]=Mit diesem Modul kann eine Liste der als nächstes anliegenden Ereignisse und Aufgaben gedruckt werden
-Comment[el]=Αυτό το πρόσθετο σας επιτρέπει να εκτυπώνετε μία λίστα γεγονότων ή προς υλοποίηση εργασιών.
+Comment[el]=Αυτό το πρόσθετο σας επιτρέπει να εκτυπώνετε μία λίστα επερχόμενων γεγονότων και προς υλοποίηση εργασιών.
 Comment[en_GB]=This plugin allows you to print out a list of all upcoming events and to-dos.
 Comment[es]=Este complemento le permite imprimir una lista de todos los próximos eventos y tareas pendientes.
 Comment[et]=See plugin võimaldab trükkida kõigi eelseisvate sündmuste ja ülesannete nimekirja.
