--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -23,7 +23,7 @@ Name[cs]=Aktivita
 Name[cy]=Rhydd/Prysur
 Name[da]=Ledig/optaget
 Name[de]=Frei/Belegt
-Name[el]=Free/Busy
+Name[el]=Ελεύθερος,-η/Απασχολημένος,-η
 Name[en_GB]=Free/Busy
 Name[eo]=Libera/Okupita
 Name[es]=Libre/Ocupado
@@ -82,7 +82,7 @@ Comment[cs]=Nastavení aktivity pro KOrganizer
 Comment[cy]=Ffurfweddiad Rhydd/Prysur KTrefnydd
 Comment[da]=KOrganizer indstilling af ledig/optaget
 Comment[de]=Frei/Belegt-Festlegung für KOrganizer
-Comment[el]=Ρυθμίσεις KOrganizer Free/Busy
+Comment[el]=Ρυθμίσεις διαθεσιμότητας του KOrganizer
 Comment[en_GB]=KOrganizer Free/Busy Configuration
 Comment[eo]=KOrganizilo Agordo pri libero/okupito
 Comment[es]=Configuración de libre/ocupado de KOrganizer
