--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -83,7 +83,7 @@ Comment[ca@valencia]=Configuració del connector del KOrganizer
 Comment[cs]=Nastavení modulů KOrganizeru
 Comment[da]=KOrganizer plugin-indstilling
 Comment[de]=Modul-Einrichtung für KOrganizer
-Comment[el]=Ρύθμιση προσθέτων του KOrganizer
+Comment[el]=Ρύθμιση πρόσθετων του KOrganizer
 Comment[en_GB]=KOrganizer Plugin Configuration
 Comment[eo]=KOrganizilo-Kromaĵagordo
 Comment[es]=Configuración de los complementos de KOrganizer
