Clean up. Use transport manager widget and co. Before we can see list of sender but we can't change it and it was necessary to open kmail to change it it's was not good and there was not info about it. Now we use transport widget it's better.
svn path=/trunk/KDE/kdepim/; revision=1083518

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -245,6 +245,7 @@ target_link_libraries(korganizerprivate
   ${KDEPIMLIBS_KHOLIDAYS_LIBS}
   ${KDEPIMLIBS_AKONADI_LIBS}
   ${KDEPIMLIBS_AKONADI_KCAL_LIBS}
+  ${KDEPIMLIBS_MAILTRANSPORT_LIBRARY}
   korganizer_eventviewer
   kdepim
   korganizer_interfaces
