SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/akregator/; revision=1085578

--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -18,11 +18,12 @@ Name[af]=Beskikbaar/Besig
 Name[ar]=متفرّغ/مشغول
 Name[bg]=Свободно/заето
 Name[ca]=Lliure/ocupat
+Name[ca@valencia]=Lliure/ocupat
 Name[cs]=Aktivita
 Name[cy]=Rhydd/Prysur
 Name[da]=Ledig/optaget
 Name[de]=Frei/Belegt
-Name[el]=Free/Busy
+Name[el]=Ελεύθερος,-η/Απασχολημένος,-η
 Name[en_GB]=Free/Busy
 Name[eo]=Libera/Okupita
 Name[es]=Libre/Ocupado
@@ -55,7 +56,7 @@ Name[oc]=Liure/ocupat
 Name[pa]=ਵੇਹਲਾ/ਰੁਝਿਆ
 Name[pl]=Wolny/zajęty
 Name[pt]=Livre/Ocupado
-Name[pt_BR]=Disponibilidade
+Name[pt_BR]=Livre/ocupado
 Name[ro]=Liber/ocupat
 Name[ru]=Занятое время
 Name[sk]=Voľný čas
@@ -76,11 +77,12 @@ Comment[af]=KOrganizer Beskikbaar/Besig opstelling
 Comment[ar]=إعداد متفرّغ/مشغول لبرنامج المنظم 
 Comment[bg]=Настройки на свободно/заето за KOrganizer
 Comment[ca]=Configuració de Lliure/ocupat per a KOrganizer
+Comment[ca@valencia]=Configuració de Lliure/ocupat per a KOrganizer
 Comment[cs]=Nastavení aktivity pro KOrganizer
 Comment[cy]=Ffurfweddiad Rhydd/Prysur KTrefnydd
 Comment[da]=KOrganizer indstilling af ledig/optaget
 Comment[de]=Frei/Belegt-Festlegung für KOrganizer
-Comment[el]=Ρυθμίσεις KOrganizer Free/Busy
+Comment[el]=Ρυθμίσεις διαθεσιμότητας του KOrganizer
 Comment[en_GB]=KOrganizer Free/Busy Configuration
 Comment[eo]=KOrganizilo Agordo pri libero/okupito
 Comment[es]=Configuración de libre/ocupado de KOrganizer
