--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -6,6 +6,7 @@ Name[ar]=ملحق التقويم اليهودي
 Name[bg]=Приставка за еврейския календар
 Name[br]=Lugent deiziadur yudev
 Name[ca]=Connector de calendari jueu
+Name[ca@valencia]=Connector de calendari jueu
 Name[cs]=Modul židovského kalendáře
 Name[da]=Jødisk kalender-plugin
 Name[de]=Modul für jüdischen Kalender
@@ -40,7 +41,7 @@ Name[nl]=Joodse kalenderplugin
 Name[nn]=Kalender-programtillegg for jødisk kalender
 Name[pl]=Wtyczka kalendarza żydowskiego
 Name[pt]='Plugin' do Calendário Judeu
-Name[pt_BR]=Plug-in de Calendário judaico
+Name[pt_BR]=Plug-in de calendário judaico
 Name[ro]=Modul calendar evreiesc
 Name[ru]=Еврейский календарь
 Name[sk]=Modul Židovského kalendára
@@ -57,10 +58,11 @@ Comment=Shows all dates in KOrganizer also in the Jewish calendar system.
 Comment[ar]=اعرض الأيام في المنظم وايضا في نظام التقويم اليهودي.
 Comment[bg]=Приставката служи за показване на датите според еврейския календар.
 Comment[ca]=Mostra totes les dates en el KOrganizer també en el sistema del calendari jueu.
+Comment[ca@valencia]=Mostra totes les dates en el KOrganizer també en el sistema del calendari jueu.
 Comment[cs]=Zobrazení všech dat v KOrganizeru také v židovském kalendáři.
 Comment[da]=Viser alle datoer i KOrganizer - også i det jødiske kalendersystem.
 Comment[de]=Zeigt alle Daten in KOrganizer auch im jüdischen Kalendarium an.
-Comment[el]=Εμφανίζει όλες τις ημερομηνίες στο korganizer και στο εβραϊκό ημερολογιακό σύστημα.
+Comment[el]=Εμφανίζει στο KOrganizer όλες τις ημερομηνίες και στο εβραϊκό ημερολογιακό σύστημα.
 Comment[en_GB]=Shows all dates in KOrganizer also in the Jewish calendar system.
 Comment[es]=Muestra todas las fechas en KOrganizer también en el sistema de calendario judío.
 Comment[et]=Näitab KOrganizeris kõiki kuupäevi ka juudi kalendri järgi.
