--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -3,6 +3,7 @@ Name=DBUSCalendar
 Name[ar]=التقويم DBUS
 Name[bg]=DBUSCalendar
 Name[ca]=DBUSCalendar
+Name[ca@valencia]=DBUSCalendar
 Name[cs]=DBUSCalendar
 Name[da]=DBUSCalendar
 Name[de]=D-Bus-Kalender
@@ -42,6 +43,7 @@ X-KDE-ServiceType=DBUS/Organizer
 Comment=Organizer with a D-Bus interface
 Comment[ar]=برنامج المنظم مع واجهة D-Bus
 Comment[ca]=Organitzador amb una interfície D-Bus
+Comment[ca@valencia]=Organitzador amb una interfície D-Bus
 Comment[cs]=Organizátor s D-BUS rozhraním
 Comment[da]=Planlægningskalender med en D-BUS-grænseflade
 Comment[de]=Organizer mit D-Bus-Schnittstelle
@@ -61,6 +63,7 @@ Comment[nb]=Organizer med D-Bus-grensesnitt
 Comment[nds]=En Daagpleger mit en D-Bus-Koppelsteed
 Comment[nl]=Organizer met een D-Bus-interface
 Comment[nn]=Organiserar med eit D-Bus-grensesnitt
+Comment[pa]=ਡੀ-ਬੱਗ ਇੰਟਰਫੇਸ ਨਾਲ ਪਰਬੰਧਕ
 Comment[pl]=Organizator z interfejsem D-Bus
 Comment[pt]=Organizador com uma interface de D-Bus
 Comment[pt_BR]=Organizador com interface D-Bus
