--- a/interfaces/calendar/calendardecoration.desktop
+++ b/interfaces/calendar/calendardecoration.desktop
@@ -2,10 +2,11 @@
 Name=Calendar Decoration Interface
 Name[ar]=واجهة ديكور التقويم
 Name[ca]=Interfície de decoració del calendari
+Name[ca@valencia]=Interfície de decoració del calendari
 Name[cs]=Rozhraní dekorace kalendáře
 Name[da]=Kalenderdekorations-plugin
 Name[de]=Dekoration für den Kalender
-Name[el]=Διασύνδεση διακόσμησης ημερολογίου
+Name[el]=Διεπαφή διακόσμησης ημερολογίου
 Name[en_GB]=Calendar Decoration Interface
 Name[es]=Interfaz de decoración del calendario
 Name[et]=Kalendri dekoratsiooni liides
@@ -44,6 +45,7 @@ Comment[ar]=ملحق ديكور التقويم
 Comment[bg]=Приставка за декорация на календара
 Comment[br]=Lugent kinkladur an deiziadur
 Comment[ca]=Connector de decoració del calendari
+Comment[ca@valencia]=Connector de decoració del calendari
 Comment[cs]=Modul dekorace kalendáře
 Comment[cy]=Ategyn Addurniad Calendr
 Comment[da]=Calendar-dekorations-plugin
