--- a/interfaces/calendar/calendarplugin.desktop
+++ b/interfaces/calendar/calendarplugin.desktop
@@ -2,10 +2,11 @@
 Name=Calendar Plugin Interface
 Name[ar]=واجهة ملحق التقويم
 Name[ca]=Interfície de connector del calendari
+Name[ca@valencia]=Interfície de connector del calendari
 Name[cs]=Rozhraní modulu kalendáře
 Name[da]=Kalenders plugin-grænseflade
 Name[de]=Kalender-Modulschnittstelle
-Name[el]=Διασύνδεση προσθέτου ημερολογίου
+Name[el]=Διεπαφή προσθέτου ημερολογίου
 Name[en_GB]=Calendar Plugin Interface
 Name[es]=Complemento de interfaz del calendario
 Name[et]=Kalendriplugina liides
@@ -44,6 +45,7 @@ Comment[ar]=ملحق التقويم
 Comment[bg]=Приставка за календар
 Comment[br]=Lugent an deiziadur
 Comment[ca]=Connector calendari
+Comment[ca@valencia]=Connector calendari
 Comment[cs]=Kalendářový modul
 Comment[cy]=Ategyn Calendr
 Comment[da]=Calendar-plugin
