--- a/interfaces/korganizer/korgprintplugin.desktop
+++ b/interfaces/korganizer/korgprintplugin.desktop
@@ -2,10 +2,11 @@
 Name=KOrganizer Print Plugin Interface
 Name[ar]=واجهة ملحق طباعة برنامج المنظم
 Name[ca]=Interfície de connector d'impressió del KOrganizer
+Name[ca@valencia]=Interfície de connector d'impressió del KOrganizer
 Name[cs]=Tiskové rozhraní komponenty KOrganizeru
 Name[da]=Grænseflade til KOrganizer print-plugin
 Name[de]=KOrganizer-Druckschnittstelle
-Name[el]=Διασύνδεση προσθέτου εκτύπωσης KOrganizer
+Name[el]=Διεπαφή προσθέτου εκτύπωσης KOrganizer
 Name[en_GB]=KOrganizer Print Plugin Interface
 Name[es]=Interfaz del complemento de impresión de KOrganizer
 Name[et]=KOrganizeri trükkimisplugina liides
@@ -43,6 +44,7 @@ Comment[ar]=جزء برنامج المنظم
 Comment[bg]=Модул KOrganizer
 Comment[br]=Perzh KOrganizer
 Comment[ca]=Part de KOrganizer
+Comment[ca@valencia]=Part de KOrganizer
 Comment[cs]=KOrganizer Part
 Comment[cy]=KTrefnydd Part
 Comment[da]=KOrganizer Part
