--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -19,6 +19,7 @@ Name[ar]=الملحقات
 Name[bg]=Приставки
 Name[br]=Lugantoù
 Name[ca]=Connectors
+Name[ca@valencia]=Connectors
 Name[cs]=Moduly
 Name[cy]=Ategion
 Name[da]=Plugin
@@ -78,10 +79,11 @@ Comment[ar]=إعدادات ملحق برنامج المنظَم
 Comment[bg]=Настройки на приставките за KOrganizer
 Comment[br]=Kefluniadur al lugent KOrganizer
 Comment[ca]=Configuració del connector del KOrganizer
+Comment[ca@valencia]=Configuració del connector del KOrganizer
 Comment[cs]=Nastavení modulů KOrganizeru
 Comment[da]=KOrganizer plugin-indstilling
 Comment[de]=Modul-Einrichtung für KOrganizer
-Comment[el]=Ρύθμιση προσθέτων του KOrganizer
+Comment[el]=Ρύθμιση πρόσθετων του KOrganizer
 Comment[en_GB]=KOrganizer Plugin Configuration
 Comment[eo]=KOrganizilo-Kromaĵagordo
 Comment[es]=Configuración de los complementos de KOrganizer
