--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -5,6 +5,7 @@ Name[af]=Wat is volgende - druk styl
 Name[ar]=ما هو نمط الطباعة التالي
 Name[bg]=What's Next Print Style
 Name[ca]=Estil d'impressió Què toca ara?
+Name[ca@valencia]=Estil d'impressió Què toca ara?
 Name[cs]=Styl deníku - co je nového
 Name[da]=Hvad er det næste-udskriftsstil
 Name[de]=„Was kommt als nächstes“-Druckstil
@@ -55,10 +56,11 @@ Comment[af]=Hierdie inprop module druk 'n lys van al die opkomende afsprake en t
 Comment[ar]=هذا الملحق يتيح طباعة قائمة لجميع الأحداث و الواجِبات القادمة
 Comment[bg]=Приставката служи за печат на бъдещи събития и задачи в списъчна форма.
 Comment[ca]=Aquest connector us permet imprimir una llista de tots els esdeveniments i tasques pendents propers.
+Comment[ca@valencia]=Este connector vos permet imprimir una llista de tots els esdeveniments i tasques pendents propers.
 Comment[cs]=Tento modul umožňuje tisk seznamu všech budoucích událostí a úkolů.
 Comment[da]=Dette plugin gør at du kan udskrive en liste med alle kommende begivenheder og opgaver.
 Comment[de]=Mit diesem Modul kann eine Liste der als nächstes anliegenden Ereignisse und Aufgaben gedruckt werden
-Comment[el]=Αυτό το πρόσθετο σας επιτρέπει να εκτυπώνετε μία λίστα γεγονότων ή προς υλοποίηση εργασιών.
+Comment[el]=Αυτό το πρόσθετο σας επιτρέπει να εκτυπώνετε μία λίστα επερχόμενων γεγονότων και προς υλοποίηση εργασιών.
 Comment[en_GB]=This plugin allows you to print out a list of all upcoming events and to-dos.
 Comment[es]=Este complemento le permite imprimir una lista de todos los próximos eventos y tareas pendientes.
 Comment[et]=See plugin võimaldab trükkida kõigi eelseisvate sündmuste ja ülesannete nimekirja.
