--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,7 @@ install(TARGETS korganizer_core ${INSTALL_TARGETS_DEFAULT_ARGS})
 
 set(korganizerprivate_LIB_SRCS
   ${libkdgantt1_SRCS}
+  collectiongeneralpage.cpp
   komessagebox.cpp
   koalternatelabel.cpp
   kodecorationlabel.cpp
@@ -226,6 +227,7 @@ set(korganizerprivate_LIB_SRCS
 kde4_add_kcfg_files(korganizerprivate_LIB_SRCS htmlexportsettings.kcfgc )
 
 kde4_add_ui_files(korganizerprivate_LIB_SRCS
+  accountscalendarwidget.ui
   multiagendaviewconfigwidget.ui
   filteredit_base.ui publishdialog_base.ui kogroupwareprefspage.ui searchdialog_base.ui timescaleedit_base.ui
   printing/calprintincidenceconfig_base.ui printing/calprintdayconfig_base.ui printing/calprintmonthconfig_base.ui printing/calprinttodoconfig_base.ui printing/calprintweekconfig_base.ui
