Fixed CMakeLists.txt file.
svn path=/trunk/KDE/kdepim/; revision=1086514

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,6 +214,7 @@ set(korganizerprivate_LIB_SRCS
   eventarchiver.cpp
   exportwebdialog.cpp
   kocorehelper.cpp
+  collectiongeneralpage.cpp
   incidencechanger.cpp
   kohelper.cpp
   cellitem.cpp
