--- a/korganizer_part.rc
+++ b/korganizer_part.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="korganizer" version="416">
+<kpartgui name="korganizer" version="418">
 
   <MenuBar>
     <Menu name="file"><text>&amp;File</text>
@@ -191,6 +191,11 @@
     -->
     <Action name="akonadi_calendar_create"/>
     <Action name="akonadi_calendar_delete"/>
+    <Separator/>
+      <Menu name="calendar_color"><text>Calendar Colors</text>
+      <Action name="disable_color"/>
+      <Action name="assign_color"/>
+      </Menu>
     <Separator/>
     <Action name="akonadi_collection_properties"/>
 
