--- a/korganizerui.rc
+++ b/korganizerui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="korganizer" version="417">
+<kpartgui name="korganizer" version="418">
   <MenuBar>
     <Menu name="file"><text>&amp;File</text>
       <Menu name="import"><text>&amp;Import</text>
@@ -177,6 +177,11 @@
     -->
     <Action name="akonadi_calendar_create"/>
     <Action name="akonadi_calendar_delete"/>
+    <Separator/>
+      <Menu name="calendar_color"><text>Calendar Colors</text>
+      <Action name="disable_color"/>
+      <Action name="assign_color"/>
+      </Menu>
     <Separator/>
     <Action name="akonadi_collection_properties"/>
 
