--- a/korganizer_part.rc
+++ b/korganizer_part.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="korganizer" version="419">
+<kpartgui name="korganizer" version="420">
 
   <MenuBar>
     <Menu name="file"><text>&amp;File</text>
@@ -191,6 +191,7 @@
     -->
     <Action name="akonadi_calendar_create"/>
     <Action name="akonadi_calendar_delete"/>
+    <Action name="edit_calendar"/>
     <Separator/>
       <Menu name="calendar_color"><text>Calendar Colors</text>
       <Action name="assign_color"/>
