--- a/korganizerui.rc
+++ b/korganizerui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="korganizer" version="419">
+<kpartgui name="korganizer" version="420">
   <MenuBar>
     <Menu name="file"><text>&amp;File</text>
       <Menu name="import"><text>&amp;Import</text>
@@ -177,6 +177,7 @@
     -->
     <Action name="akonadi_calendar_create"/>
     <Action name="akonadi_calendar_delete"/>
+    <Action name="edit_calendar"/>
     <Separator/>
       <Menu name="calendar_color"><text>Calendar Colors</text>
       <Action name="assign_color"/>
