Start to implement "set default calendar"
svn path=/trunk/KDE/kdepim/; revision=1090966

--- a/korganizer_part.rc
+++ b/korganizer_part.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="korganizer" version="420">
+<kpartgui name="korganizer" version="421">
 
   <MenuBar>
     <Menu name="file"><text>&amp;File</text>
@@ -197,6 +197,8 @@
       <Action name="assign_color"/>
       <Action name="disable_color"/>
       </Menu>
+    <Separator/>
+    <Action name="set_standard_calendar"/>
     <Separator/>
     <Action name="akonadi_collection_properties"/>
 
