SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/akregator/; revision=1091722

--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -11,6 +11,7 @@ Name[el]=Ημερολόγιο DBUS
 Name[en_GB]=DBUSCalendar
 Name[es]=Calendario DBUS
 Name[et]=DBUSCalendar
+Name[fi]=DBUSCalendar
 Name[fr]=DBUSCalendar
 Name[ga]=Féilire DBUS
 Name[gl]=Calendario DBUS
@@ -51,6 +52,7 @@ Comment[el]=Οργανωτής με διασύνδεση D-Bus
 Comment[en_GB]=Organiser with a D-Bus interface
 Comment[es]=Organizador con una interfaz D-Bus
 Comment[et]=Korraldaja D-Busi liidesega
+Comment[fi]=D-Bus-rajapintainen ajanhallinta
 Comment[fr]=Agenda avec une interface D-Bus
 Comment[ga]=Eagraí a bhfuil comhéadan D-Bus aige
 Comment[gl]=Organizador con interface D-Bus
