--- a/interfaces/calendar/calendardecoration.desktop
+++ b/interfaces/calendar/calendardecoration.desktop
@@ -10,6 +10,7 @@ Name[el]=Διεπαφή διακόσμησης ημερολογίου
 Name[en_GB]=Calendar Decoration Interface
 Name[es]=Interfaz de decoración del calendario
 Name[et]=Kalendri dekoratsiooni liides
+Name[fi]=Kalenteritekstin koristeluliitännäinen
 Name[fr]=Interface de décoration d'agenda
 Name[ga]=Comhéadan Maisíochta Féilire
 Name[gl]=Interface de decoración de calendarios
