--- a/interfaces/calendar/calendarplugin.desktop
+++ b/interfaces/calendar/calendarplugin.desktop
@@ -10,6 +10,7 @@ Name[el]=Διεπαφή προσθέτου ημερολογίου
 Name[en_GB]=Calendar Plugin Interface
 Name[es]=Complemento de interfaz del calendario
 Name[et]=Kalendriplugina liides
+Name[fi]=Kalenteriliitännäisen käyttöliittymä
 Name[fr]=Interface de module d'agenda
 Name[ga]=Comhéadan Breiseáin Féilire
 Name[gl]=Interface do engadido do Calendario
