--- a/kcmconfigs/korganizer_configmain.desktop
+++ b/kcmconfigs/korganizer_configmain.desktop
@@ -32,7 +32,7 @@ Name[es]=General
 Name[et]=Üldine
 Name[eu]=Orokorra
 Name[fa]=عمومی
-Name[fi]=Yleinen
+Name[fi]=Yleistä
 Name[fr]=Général
 Name[fy]=Algemien
 Name[ga]=Ginearálta
