--- a/interfaces/korganizer/CMakeLists.txt
+++ b/interfaces/korganizer/CMakeLists.txt
@@ -12,7 +12,7 @@ set(korganizer_interfaces_LIB_SRCS
 
 kde4_add_library(korganizer_interfaces SHARED ${korganizer_interfaces_LIB_SRCS})
 
-target_link_libraries(korganizer_interfaces ${KDE4_KIO_LIBS} ${KDEPIMLIBS_AKONADI_LIBS} ${KDEPIMLIBS_AKONADI_KCAL_LIBS} akonadi-kcal_next)
+target_link_libraries(korganizer_interfaces ${KDE4_KIO_LIBS} ${KDEPIMLIBS_AKONADI_LIBS} ${KDEPIMLIBS_AKONADI_KCAL_LIBS} akonadi_next akonadi-kcal_next)
 
 set_target_properties(korganizer_interfaces PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
 install(TARGETS korganizer_interfaces ${INSTALL_TARGETS_DEFAULT_ARGS})
