Move KPIM::AutoCheckTreeWidget, KPIM::CategoryHierarchyReader, KPIM::CategoryEditDialog, KPIM::CategorySelectDialog and KPIM::CategoryConfig (last class in kpimprefs.h) to korganizer/ because it was the only user
This code should be dropped and replaced with Nepomuk tags anyway...

svn path=/trunk/KDE/kdepim/; revision=1104716

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,16 @@ set(korganizer_core_LIB_SRCS
     koprefs.cpp
     kocore.cpp
     koidentitymanager.cpp
+    autochecktreewidget.cpp
+    categoryconfig.cpp
+    categoryeditdialog.cpp
+    categoryhierarchyreader.cpp
+    categoryselectdialog.cpp
+)
+
+kde4_add_ui_files(korganizer_core_LIB_SRCS
+  categoryeditdialog_base.ui
+  categoryselectdialog_base.ui
 )
 
 kde4_add_kcfg_files(korganizer_core_LIB_SRCS koprefs_base.kcfgc )
