Move KCheckComboBox to korganizer/ because it is the only user of this class
svn path=/trunk/KDE/kdepim/; revision=1104732

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,6 +182,7 @@ set(korganizerprivate_LIB_SRCS
   timelabels.cpp
   timescaleconfigdialog.cpp
   datenavigator.cpp
+  kcheckcombobox.cpp
   kdatenavigator.cpp
   datenavigatorcontainer.cpp
   datechecker.cpp
