- Moved KPIM::EmbeddedUrlPage from libkdepim/ to korganizer/ - Moved KPIM::KConfigPropagator and KPIM::KConfigWizard from libkdepim/ to wizards/ - Removed unneeded dependencies of wizards/ to libkdepim (including Qt3Support dependency)
svn path=/trunk/KDE/kdepim/; revision=1104804

--- a/incidenceeditor/CMakeLists.txt
+++ b/incidenceeditor/CMakeLists.txt
@@ -31,6 +31,7 @@ set( korg_incidenceeditor_LIB_SRCS
     freebusyurldialog.cpp
     templatemanagementdialog.cpp
     ../designerfields.cpp
+    ../embeddedurlpage.cpp
 )
 
 
