Changed HtmlExport into HtmlExportJob with an async API.
This removes yet another occurrence of KABC::StdAddressBook

svn path=/trunk/KDE/kdepim/; revision=1106262

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -236,7 +236,7 @@ set(korganizerprivate_LIB_SRCS
   kohelper.cpp
   cellitem.cpp
   akonadicollectionview.cpp
-  htmlexport.cpp
+  htmlexportjob.cpp
   printing/calprinter.cpp
   printing/calprintpluginbase.cpp
   printing/calprintdefaultplugins.cpp
