--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,8 +10,9 @@ kde4_add_executable(korgplugins TEST ${korgplugins_SRCS})
 
 target_link_libraries(korgplugins korganizerprivate korganizer_core ${KDE4_KIO_LIBS} ${KDEPIMLIBS_KHOLIDAYS_LIBS} ${KDEPIMLIBS_AKONADI_KCAL_LIBS})
 
-kde4_add_executable(testkcmdesignerfields TEST testkcmdesignerfields.cpp ../kcmdesignerfields.cpp ../designerfields.cpp)
+kde4_add_executable(testkcmdesignerfields TEST testkcmdesignerfields.cpp ../kcmdesignerfields.cpp )
 target_link_libraries(testkcmdesignerfields
                       ${QT_QTUITOOLS_LIBRARY}
                       ${KDE4_KIO_LIBS}
+                      incidenceeditors
                      )
