preview dialog for kolab/issue3974
(Not being used yet)

MERGE: trunk

svn path=/branches/kdepim/enterprise/kdepim/; revision=1131307

--- a/Makefile.am
+++ b/Makefile.am
@@ -101,6 +101,7 @@ libkorganizer_la_SOURCES = komessagebox.cpp \
 	koprefs_base.kcfgc \
 	koincidencetooltip.cpp aboutdata.cpp \
 	importdialog.cpp \
+	previewdialog.cpp \
 	korganizerifaceimpl.cpp \
 	freebusymanager.cpp freebusyurldialog.cpp \
 	eventarchiver.cpp koidentitymanager.cpp \
