SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/akregator/; revision=1144033

--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -73,7 +73,7 @@ Comment[ro]=Organizator cu interfață D-Bus
 Comment[ru]=Органайзер с интерфейсом D-Bus
 Comment[sl]=Organizator z vmesnikom D-Bus
 Comment[sv]=Filofax med D-Bus gränssnitt
-Comment[tr]=D-BUS arayüzü kullanan Düzenleyici
+Comment[tr]=D-Bus arayüzü kullanan Düzenleyici
 Comment[uk]=Тижневик з інтерфейсом D-Bus
 Comment[x-test]=xxOrganizer with a D-Bus interfacexx
 Comment[zh_CN]=D-BUS 接口的助理程序
