--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -71,7 +71,7 @@ Comment[pt_BR]=Este plug-in oferece a Imagem do Dia da Wikipedia
 Comment[ru]=Изображение дня с Wikipedia для календаря
 Comment[sl]=Ta vstavek ponuja sliko dneva z Wikipedije
 Comment[sv]=Insticksprogrammet tillhandahåller Wikipedias 'Dagens bild'
-Comment[tr]=Bu eklenti Wikipedia'dan Günün Resmini getirir
+Comment[tr]=Bu eklenti Wikipedia Günün Resmini getirir
 Comment[uk]=Цей додаток працює з «Зображеннями дня» з Вікіпедії
 Comment[x-test]=xxThis plugin provides the Wikipedia Picture of the Dayxx
 Comment[zh_CN]=此插件提供对 Wikipedia 每日图片的支持
