SVN_MERGE Merged revisions 1137937-1137939,1138213,1139114,1139408 via svnmerge from svn+ssh://vkrause@svn.kde.org/home/kde/branches/work/komo/kdepim
........
  r1137937 | amantia | 2010-06-14 20:07:14 +0200 (Mon, 14 Jun 2010) | 1 line
  
  Add a copy of kdgantt v2.
........
  r1137938 | amantia | 2010-06-14 20:08:15 +0200 (Mon, 14 Jun 2010) | 1 line
  
  Port timeline view to kdgantt2.
........
  r1137939 | amantia | 2010-06-14 20:08:33 +0200 (Mon, 14 Jun 2010) | 1 line
  
  Compile.
........
  r1138213 | amantia | 2010-06-15 13:37:51 +0200 (Tue, 15 Jun 2010) | 1 line
  
  Better lookin timeline view.
........
  r1139114 | amantia | 2010-06-17 13:07:34 +0200 (Thu, 17 Jun 2010) | 1 line
  
  Better grid scaling.
........
  r1139408 | bricks | 2010-06-18 09:55:39 +0200 (Fri, 18 Jun 2010) | 6 lines
  
  Fix for ARM builds
  quoting the Qt doc:
  "qreal is typedef for double on all platforms except for those using CPUs with ARM architectures.
   On ARM-based platforms, qreal is a typedef for float for performance reasons."
  In C++ x.y values are double. Therefore qMax/qMin couldn't be compiled on ARM.
........

svn path=/trunk/KDE/kdepim/; revision=1146860

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,6 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/interfaces
                     ${CMAKE_BINARY_DIR}/akonadi/kcal
                     ${CMAKE_SOURCE_DIR}/akonadi/
                     ${CMAKE_SOURCE_DIR}/korganizer/printing
-                    ${CMAKE_SOURCE_DIR}/kdgantt1
                     ${CMAKE_BINARY_DIR}/libkdepim
                     ${CMAKE_SOURCE_DIR}/libkdepimdbusinterfaces
                     ${CMAKE_BINARY_DIR}/libkdepimdbusinterfaces
@@ -159,7 +158,6 @@ install(TARGETS korganizer_core ${INSTALL_TARGETS_DEFAULT_ARGS})
 
 if (QT_QT3SUPPORT_FOUND)
 set(korganizerprivate_LIB_SRCS
-  ${libkdgantt1_SRCS}
   collectiongeneralpage.cpp
   koalternatelabel.cpp
   kodecorationlabel.cpp
@@ -258,6 +256,7 @@ target_link_libraries(korganizerprivate
   akonadi-kcal_next
   akonadi_next
   incidenceeditors
+  kdgantt2
 )
 
 set_target_properties(korganizerprivate PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
